More some changes

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <h2 class="popular__card-h2">London</h2>
             <p class="popular__card-p">Car hire in 75 pick-up locations</p>
             <div class="popular__car-price">
-              <img class="popular__icon" src="./src/icons/car.svg" alt="car">
+              <img class="popular__icon" src="./src/icons/car.svg" alt="car" />
               <p class="popular__price">From $ 669,00 per day</p>
             </div>
             <p class="popular__p-orange">Search rental cars in London</p>
@@ -176,7 +176,7 @@
             <h2 class="popular__card-h2">Madrid</h2>
             <p class="popular__card-p">Car hire in 75 pick-up locations</p>
             <div class="popular__car-price">
-              <img class="popular__icon" src="./src/icons/car.svg" alt="car">
+              <img class="popular__icon" src="./src/icons/car.svg" alt="car" />
               <p class="popular__price">From % 799,00 per day</p>
             </div>
             <p class="popular__p-orange">Search rental cars in London</p>
@@ -190,12 +190,12 @@
             <h2 class="popular__card-h2">Paris</h2>
             <p class="popular__card-p">Car hire in 75 pick-up locations</p>
             <div class="popular__car-price">
-              <img class="popular__icon" src="./src/icons/car.svg" alt="car">
+              <img class="popular__icon" src="./src/icons/car.svg" alt="car" />
               <p class="popular__price">From % 899,00 per day</p>
             </div>
             <p class="popular__p-orange">Search rental cars in London</p>
           </div>
-          
+
           <div class="popular__card">
             <img
               class="popular__img"
@@ -205,7 +205,7 @@
             <h2 class="popular__card-h2">Dubai</h2>
             <p class="popular__card-p">Car hire in 75 pick-up locations</p>
             <div class="popular__car-price">
-              <img class="popular__icon" src="./src/icons/car.svg" alt="car">
+              <img class="popular__icon" src="./src/icons/car.svg" alt="car" />
               <p class="popular__price">From % 669,00 per day</p>
             </div>
             <p class="popular__p-orange">Search rental cars in London</p>
@@ -219,7 +219,7 @@
             <h2 class="popular__card-h2">Roma</h2>
             <p class="popular__card-p">Car hire in 75 pick-up locations</p>
             <div class="popular__car-price">
-              <img class="popular__icon" src="./src/icons/car.svg" alt="car">
+              <img class="popular__icon" src="./src/icons/car.svg" alt="car" />
               <p class="popular__price">From $ 799,00 per day</p>
             </div>
             <p class="popular__p-orange">Search rental cars in London</p>
@@ -233,7 +233,7 @@
             <h2 class="popular__card-h2">Jakarta</h2>
             <p class="popular__card-p">Car hire in 75 pick-up locations</p>
             <div class="popular__car-price">
-              <img class="popular__icon" src="./src/icons/car.svg" alt="car">
+              <img class="popular__icon" src="./src/icons/car.svg" alt="car" />
               <p class="popular__price">From $ 889,00 per day</p>
             </div>
             <p class="popular__p-orange">Search rental cars in London</p>
@@ -241,5 +241,71 @@
         </div>
       </div>
     </section>
+    <section class="location">
+      <div class="container">
+        <h2 class="location__h2">Location</h2>
+        <div class="location__box-iframe">
+          <iframe
+            class="location__iframe"
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1145.2991020632483!2d74.58717260840054!3d42.87937770336879!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sru!2skg!4v1683390343067!5m2!1sru!2skg"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer__main">
+        <div class="container">
+          <div class="footer__main-box">
+            <div class="footer__logo-text">
+              <div class="footer__logo">
+                <img
+                  class="footer__logo-img"
+                  src="./src/img/Group 1.svg"
+                  alt="logo"
+                />
+                <a href="#" class="footer__logo-p">HKinvision</a>
+              </div>
+              <p class="footer__text">
+                The World's Best Luxury Car's Dealing Platform
+              </p>
+            </div>
+            <div class="footer__menu">
+              <div class="footer__company">
+                <h2 class="footer__menu-h2">Company</h2>
+                <p class="footer__menu-p">About Us</p>
+                <p class="footer__menu-p">Product</p>
+                <p class="footer__menu-p">Testimonial</p>
+              </div>
+              <div class="footer__support">
+                <h2 class="footer__menu-h2">Support</h2>
+                <p class="footer__menu-p">FAQ</p>
+                <p class="footer__menu-p">Privacy Policy</p>
+                <p class="footer__menu-p">Terms of Services</p>
+              </div>
+              <div class="footer__category">
+                <h2 class="footer__menu-h2">Category</h2>
+                <p class="footer__menu-p">Super Cars</p>
+                <p class="footer__menu-p">Sport Cars</p>
+                <p class="footer__menu-p">More Cars</p>
+              </div>
+              <div class="footer__social-net">
+                <a  class="footer__net" href="https://www.facebook.com/"><img class="footer__fyi-icon" src="./src/icons/icons8-facebook.svg" alt="social-net"></a>
+                <a  class="footer__net" href="https://www.instagram.com/motion_web/"><img class="footer__fyi-icon" src="./src/icons/icons8-instagram.svg" alt="social-net"></a>
+                <a  class="footer__net" href="https://www.youtube.com/@motionwebllc683"><img class="footer__fyi-icon" src="./src/icons/icons8-youtube-play.svg" alt="social-net"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer__foot">
+        <div class="container">
+          <p class="footer__right">©2022 HKInvestor. All right reserved</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
